Implemented Tile edit cancel behaviour from right menu.

--- a/client/views/right-menu/right-menu.html
+++ b/client/views/right-menu/right-menu.html
@@ -98,12 +98,12 @@
 <template name="editTileMenu">
   {{# rightMenu }}
     <li>
-      <a data-cancel-edit-tile>
+      <a data-cancel-edit>
         <i class="mdi-content-clear left"> Cancel</i>
       </a>
     </li>
     <li>
-      <a data-save-tile>
+      <a data-save-edit>
         <i class="mdi-action-done left"> Save Tile</i>
       </a>
     </li>
