Router now transfers data context containing `.renderedUser` object, which contains the `.profile` data of the user's page being rendered, as well as their user ID.  Minor syntax updates for client and helpers, such as eliminating middle-man variables for @data and also suppressing some console output from the `getTile` global helper when the _id is null, since this default behaviour is now deprecated in the new tileViewModal.  Due to tileViewModal being used to preview currentlyEditing tile, added extra logic to optionally suppress the modal footer.

--- a/client/views/modals/modals.html
+++ b/client/views/modals/modals.html
@@ -1,28 +1,9 @@
 <template name="tileViewModal">
   <div id="tile-view-modal" class="modal modal-fixed-footer">
   {{#with getTile currentlyViewing}}
-    <div style="border-color: {{colour}}">
-      <div class="modal-content">
-        <div class='title'>
-          {{title}}
-        </div>
-        {{#if hasDates this}}
-          <div class="dates">
-            {{{formatTileDates dates}}}
-          </div>
-        {{/if}}
-        <div class='content'>
-          {{{textToHTML content}}}
-        </div>
-      </div>
 
-      <div class="modal-footer">
-        <button id="close-view-modal" type="button" class="btn waves-effect waves-light modal-action modal-close grey"><i class="mdi-action-done left"></i>Done</button>
-        <div class="progress">
-          <div class="indeterminate"></div>
-        </div>
-      </div>
-    </div>
+        {{> tileBig tile=this}}
+
   {{/with}}
   </div>
 </template>
