--- a/client/views/modals/modals.less
+++ b/client/views/modals/modals.less
@@ -47,7 +47,7 @@
 
 
 /*  styles for tileViewModal  */
-#tile-view-modal > div {
+#tile-big {
   border-top-style: solid;
   border-width: 10px;
   border-radius: 5px;
@@ -55,17 +55,17 @@
   background-color: #eee;
   padding: 1px;
 }
-#tile-view-modal .modal-content {
+#tile-big .modal-content {
   padding-left: 45px;
   padding-right: 45px;
 }
-#tile-view-modal .title {
+#tile-big .title {
   font-size: 26px;
 }
-#tile-view-modal .dates {
+#tile-big .dates {
   color: @darkGrey;
   font-size: 20px;
 }
-#tile-view-modal .content {
+#tile-big .content {
   margin-top: 20px;
 }
