Added preview=true data context to small tile previews inside editTile template.

--- a/client/views/edit-tile/edit-tile.html
+++ b/client/views/edit-tile/edit-tile.html
@@ -5,7 +5,7 @@
     </div>
     <div class="right">
       <div id="preview-small">
-        {{> tileSmall tile=tile}}
+        {{> tileSmall tile=tile preview=true}}
       </div>
       <div id="preview-large">
         {{> tileBig tile=tile preview=true}}
