--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -1,5 +1,5 @@
 <template name="tileSmall">
-  <div data-id="{{tile._id}}" class="card tile" style="border-color: {{color}}; background-color: {{color}};">
+  <div data-id="{{tile._id}}" class="card tile" style="{{#if preview}}border-color: #000; background-color: #000;{{else}}border-color: {{color}}; background-color: {{color}};{{/if}}">
     <div class="tile-content pointer">
       <div class="tile-title">{{tile.title}}</div>
       {{#if hasDates tile}}
@@ -12,17 +12,19 @@
       </div>
     </div>
     <div class="tile-action row">
-      {{#if verify currentUser}}
-        <p class="delete-tile">
-          <a class="tile-delete" href="#"><i class="mdi-action-delete"></i></a>
-        </p>
+      {{#unless preview}}
+        {{#if verify currentUser}}
+          <p class="delete-tile">
+            <a class="tile-delete" href="#"><i class="mdi-action-delete"></i></a>
+          </p>
+          <p>
+            <a class="tile-edit" href="/edit/{{tile._id}}"><i class="mdi-editor-border-color right"></i>edit</a>
+          </p>
+        {{/if}}
         <p>
-          <a class="tile-edit" href="/edit/{{tile._id}}"><i class="mdi-editor-border-color right"></i>edit</a>
+          <a class="tile-read-more" href="#{{tile._id}}">read more</a>
         </p>
-      {{/if}}
-      <p>
-        <a class="tile-read-more" href="#{{tile._id}}">read more</a>
-      </p>
+      {{/unless}}
     </div>
   </div>
 </template>
