--- a/client/views/modals/modals.html
+++ b/client/views/modals/modals.html
@@ -1,9 +1,19 @@
 <template name="tileViewModal">
   <div id="tile-view-modal" class="modal modal-fixed-footer">
   {{#with getTile currentlyViewing}}
-
-        {{> tileBig tile=this}}
-
+    {{> tileBig tile=this}}
   {{/with}}
+  </div>
+</template>
+
+<template name="deleteTileConfirmation">
+  <div id="delete-tile-confirmation" class="modal">
+   <div class="modal-content">
+     <h4>Permanently remove this tile?</h4>
+   </div>
+   <div class="modal-footer">
+     <button data-delete-tile type="button" class="btn waves-effect waves-light modal-action modal-close red"><i class="mdi-action-delete left"></i>Delete</button>
+     <button id="cancel-tile-edit" type="button" class="btn waves-effect waves-grey modal-action modal-close grey">Cancel</button>
+   </div>
   </div>
 </template>
