Many small style upgrades.  Navbar has been abstracted to a helper template.  Created individual navbars for tileEdit and allTiles routes.

--- a/client/views/edit-tile/edit-tile.less
+++ b/client/views/edit-tile/edit-tile.less
@@ -3,7 +3,6 @@
 #edit-panel {
   margin: 0 auto;
   height: calc(~"100% - @{navbarHeight}");
-  padding-top: @navbarHeight;
   overflow-y: auto;
   position: relative;
   top: @navbarHeight;
@@ -15,6 +14,9 @@
 }
 #edit-panel .right {
   float: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 #edit-panel .left,
 #edit-panel .right {
