--- a/client/views/navbar/navbar.less
+++ b/client/views/navbar/navbar.less
@@ -6,15 +6,17 @@ nav {
   background-color: transparent;
   box-shadow: none;
   color: #000;
+  border-bottom: 2px solid @darkGrey;
 }
 nav .input-field {
   display: inline-block;
   margin-top: 0;
   height: @navbarHeight;
 }
-nav .user-name {
+nav .nav-left-text {
   font-size: 2.1em !important;
   color: #000;
+  padding-left: 20px;
 }
 #right-menu-collapse {
   position: absolute;
@@ -47,28 +49,23 @@ nav input#tile-search {
   margin: 0;
   right: 0;
   position: relative;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+  border-radius: 0;
   padding-left: 64px;
   box-sizing: border-box;
 }
 nav input#user-profile-name {
-  border-bottom-left-radius: 0;
   max-width: 350px;
 }
-nav input#user-profile-name:focus {
+/*nav input#user-profile-name:focus {
   border-right: 2px solid @lightRed;
-}
+}*/
 nav input#tile-search {
   padding-right: 64px;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  border-top-left-radius: 0;
   box-sizing: content-box;
 }
-nav input#tile-search:focus {
+/*nav input#tile-search:focus {
   border-left: 2px solid @lightRed;
-}
+}*/
 nav .nav-wrapper i {
   line-height: inherit;
 }
