--- a/client/views/right-menu/right-menu.html
+++ b/client/views/right-menu/right-menu.html
@@ -31,6 +31,7 @@
       <!-- Context Specific Tools -->
       {{ > UI.contentBlock
           context=__context__ }}
+      <!-- End context specific tools -->
     </ul>
   </div>
 </template>
