--- a/tiles.less
+++ b/tiles.less
@@ -69,7 +69,7 @@ i.left {
   margin: 0 auto;
   font-size: 24px;
   line-height: 26px;
-  font-family: Roboto Condensed;
+  font-family: Roboto;
   font-variant: small-caps;
   color: @darkGrey;
   overflow-y: auto;
