--- a/client/views/turnkey/turnkey.html
+++ b/client/views/turnkey/turnkey.html
@@ -65,27 +65,39 @@
   </div>
 </template>
 
-<template name="login">
+<template name="loginForm">
+  <form id="login-form">
+    <h4 id="login-title">Login</h4>
+    <div class="input-field">
+      <i class="mdi-communication-email prefix"></i>
+      <input id="user-email" type="email"  />
+      <label for="user-email">E-mail</label>
+    </div>
+    <div class="input-field">
+      <i class="mdi-action-lock prefix"></i>
+      <input id="user-password" type="password"/>
+      <label for="user-password">Password</label>
+    </div>
+    <button id="save-tile-edit" type="submit" class="btn waves-effect waves-light modal-action red"><i class="mdi-content-send right"></i>Sign In</button>
+    {{#if modal}}
+      <button id="cancel-tile-edit" type="button" class="btn waves-effect waves-grey modal-action modal-close grey">Cancel</button>
+    {{/if}}
+  </form>
+  <div class="center">
+    {{> socialLogin action="login" }}
+  </div>
+</template>
+
+<template name="loginScreen">
+  <div id="login-container">
+    {{> loginForm }}
+  </div>
+</template>
+
+<template name="loginModal">
   <div id="login-modal" class="modal">
-      <div class="modal-content">
-        <form id="login-form">
-          <h4 id="login-title">Login</h4>
-          <div class="input-field">
-            <i class="mdi-communication-email prefix"></i>
-            <input id="user-email" type="email"  />
-            <label for="user-email">E-mail</label>
-          </div>
-          <div class="input-field">
-            <i class="mdi-action-lock prefix"></i>
-            <input id="user-password" type="password"/>
-            <label for="user-password">Password</label>
-          </div>
-          <button id="save-tile-edit" type="submit" class="btn waves-effect waves-light modal-action red"><i class="mdi-content-send right"></i>Sign In</button>
-          <button id="cancel-tile-edit" type="button" class="btn waves-effect waves-grey modal-action modal-close grey">Cancel</button>
-        </form>
-        <div class="center">
-          {{> socialLogin action="login" }}
-        </div>
-      </div>
+    <div class="modal-content">
+      {{> loginForm modal=true }}
+    </div>
   </div>
 </template>
