--- a/client/views/turnkey/turnkey.less
+++ b/client/views/turnkey/turnkey.less
@@ -1,6 +1,11 @@
 @import "global-less";
 
 /*  login styles    */
+#login-container {
+  margin: 0 auto;
+  margin-top: 64px;
+  max-width: 500px;
+}
 #login-modal {
   max-width: 500px;
 }
