editTile now appropriately loads dates into the datepickers for pre-existing Tiles being edited.

--- a/client/views/edit-tile/edit-tile.html
+++ b/client/views/edit-tile/edit-tile.html
@@ -30,12 +30,12 @@
     <div class="tile-dates">
       <div class='input-field'>
         <i class="mdi-action-label-outline prefix"></i>
-        <input id="date-one" type="date" class="datepicker" />
+        <input id="date-one" type="date" class="datepicker" value="{{formatInputDate tile.dates.dateOne}}"/>
         <label for='date-one' class="active">Start Date</label>
       </div>
       <div class='input-field'>
         <i class="mdi-action-label prefix"></i>
-        <input id="date-two" type="date" class="datepicker" />
+        <input id="date-two" type="date" class="datepicker" value="{{formatInputDate tile.dates.dateTwo}}"/>
         <label for='date-two' class="active">End Date</label>
       </div>
     </div>
