--- a/tiles.less
+++ b/tiles.less
@@ -24,6 +24,16 @@ html {
   justify-content: flex-start;
   align-items: flex-start;
 }
+.centered-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  text-align: center;
+}
 .flex-divider {
   page-break-inside: avoid;
   width: 1px;
