--- a/client/views/turnkey/turnkey.html
+++ b/client/views/turnkey/turnkey.html
@@ -29,9 +29,9 @@
 </template>
 
 <template name="register">
-  <div id="register-form-container" class="valign-wrapper">
-    Welcome to TilesJS!  If you must burden us with your presence I suppose you ought to make an account or something.
-    <div id="register-options">
+  <div id="register-form-container" class="centered-container">
+    <p>Welcome to TilesJS!  If you must burden us with your presence I suppose you ought to make an account or something.  <a href="/">Already have an account?</a></p>
+    <div class="turnkey-options">
       <div class="left valign-wrapper">
         {{> socialLogin action="register" }}
       </div>
@@ -66,30 +66,34 @@
 </template>
 
 <template name="loginForm">
-  <form id="login-form">
-    <h4 id="login-title">Login</h4>
-    <div class="input-field">
-      <i class="mdi-communication-email prefix"></i>
-      <input id="user-email" type="email"  />
-      <label for="user-email">E-mail</label>
+  <div class="turnkey-options">
+    <div class="left valign-wrapper">
+      {{> socialLogin action="login" }}
     </div>
-    <div class="input-field">
-      <i class="mdi-action-lock prefix"></i>
-      <input id="user-password" type="password"/>
-      <label for="user-password">Password</label>
+    <div class="right">
+      <form id="login-form">
+        <div class="input-field">
+          <i class="mdi-communication-email prefix"></i>
+          <input id="user-email" type="email"  />
+          <label for="user-email">E-mail</label>
+        </div>
+        <div class="input-field">
+          <i class="mdi-action-lock prefix"></i>
+          <input id="user-password" type="password"/>
+          <label for="user-password">Password</label>
+        </div>
+        <button id="save-tile-edit" type="submit" class="{{#if modal}}modal-login-button{{/if}} btn waves-effect waves-light modal-action red"><i class="mdi-content-send right"></i>Sign In</button>
+        {{#if modal}}
+          <button id="cancel-tile-edit" type="button" class="modal-login-button btn waves-effect waves-grey modal-action modal-close grey">Cancel</button>
+        {{/if}}
+      </form>
     </div>
-    <button id="save-tile-edit" type="submit" class="btn waves-effect waves-light modal-action red"><i class="mdi-content-send right"></i>Sign In</button>
-    {{#if modal}}
-      <button id="cancel-tile-edit" type="button" class="btn waves-effect waves-grey modal-action modal-close grey">Cancel</button>
-    {{/if}}
-  </form>
-  <div class="center">
-    {{> socialLogin action="login" }}
+    <div style="clear: both"></div>
   </div>
 </template>
 
 <template name="loginScreen">
-  <div id="login-container">
+  <div id="login-container" class="centered-container">
     {{> loginForm }}
   </div>
 </template>
@@ -97,6 +101,7 @@
 <template name="loginModal">
   <div id="login-modal" class="modal">
     <div class="modal-content">
+      <h4>Login</h4>
       {{> loginForm modal=true }}
     </div>
   </div>
