--- a/client/views/right-menu/right-menu.html
+++ b/client/views/right-menu/right-menu.html
@@ -100,7 +100,7 @@
   {{# rightMenu }}
     <li>
       <a data-cancel-edit>
-        <i class="mdi-content-clear left"> Cancel</i>
+        <i class="mdi-content-clear left"> Discard Changes</i>
       </a>
     </li>
     <li>
