--- a/client/views/edit-tile/edit-tile.less
+++ b/client/views/edit-tile/edit-tile.less
@@ -21,6 +21,12 @@
   height: 100%;
 }
 
+#empty-preview {
+  font-weight: bold;
+  color: @darkGrey;
+  padding: 20px;
+  font-size: 20px;
+}
 #preview-small {
   max-height: calc(@tileHeight + 45px);
   border-bottom: 1px solid @darkGrey;
