--- a/tiles.less
+++ b/tiles.less
@@ -24,14 +24,15 @@ html {
   justify-content: flex-start;
   align-items: flex-start;
 }
+#home-container {
+  height: 100%;
+}
 .centered-container {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: auto;
   text-align: center;
 }
 .flex-divider {
