--- a/client/views/navbar/navbar.html
+++ b/client/views/navbar/navbar.html
@@ -19,6 +19,12 @@
   </nav>
 </template>
 
+<template name="setupNavbar">
+  {{#navbar}}
+    <div class="nav-left-text"><i class="mdi-action-language left"> Setup URL</i></div>
+  {{/navbar}}
+</template>
+
 <template name="editTileNavbar">
   {{#navbar}}
     <div class="nav-left-text">Edit Tile</div>
