Navbar border darkens on hover.

--- a/client/views/navbar/navbar.less
+++ b/client/views/navbar/navbar.less
@@ -6,7 +6,10 @@ nav {
   background-color: transparent;
   box-shadow: none;
   color: #000;
-  border-bottom: 2px solid @darkGrey;
+  border-bottom: 2px solid @lightRed;
+}
+nav:hover {
+  border-color: @darkRed;
 }
 nav .input-field {
   display: inline-block;
