Fixed centering of loginScreen.

--- a/client/views/turnkey/turnkey.less
+++ b/client/views/turnkey/turnkey.less
@@ -3,6 +3,8 @@
 /*  login styles    */
 #login-container {
   max-width: 500px;
+  margin: auto;
+  height: 100%;
 }
 /*#login-modal {
   max-width: 500px;
