Abstracted loginScreen template to a template helper to make it easy to inject text.  Displayed welcome text above login panel for home template.

--- a/client/views/turnkey/turnkey.html
+++ b/client/views/turnkey/turnkey.html
@@ -93,6 +93,8 @@
 
 <template name="loginScreen">
   <div id="login-container" class="centered-container">
+    {{ > UI.contentBlock
+        context=__context__ }}
     {{> loginForm }}
   </div>
 </template>
