--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -13,7 +13,11 @@
 
 <template name="noTiles">
   <div id="no-results" class="center">
-    <a href="/edit/new">Why don't you make your first Tile?</a>
+    {{#if verify currentUser}}
+      <a href="/edit/new">Why don't you make your first Tile?</a>
+    {{else}}
+      This user doesn't have any Tiles yet!
+    {{/if}}
   </div>
 </template>
 
