--- a/client/views/turnkey/turnkey.less
+++ b/client/views/turnkey/turnkey.less
@@ -94,8 +94,8 @@
 }
 .turnkey-options > .left {
   text-align: center;
-  width: 50%;
-  height: 100%;
+  width: calc(~"50% - 20px");
+  height: calc(~"100% - 20px");
   position: absolute;
 }
 #register-form-container > .turnkey-options > .left {
