--- a/client/views/turnkey/turnkey.html
+++ b/client/views/turnkey/turnkey.html
@@ -1,11 +1,3 @@
-<template name="socialLogin">
-  <div id="social-login-container">
-    <button id="google-account" type="button" class="btn waves-effect waves-light red"><i class="fa fa-fw fa-google-plus-square"></i> Google</button>
-    <button id="facebook-account" type="button" class="btn waves-effect waves-light blue"><i class="fa fa-fw fa-facebook-square"></i> Facebook</button>
-    <!--<button id="google-account" type="button" class="btn waves-effect waves-light red"><i class="fa fa-fw fa-google-plus-square"></i> Google</button>-->
-  </div>
-</template>
-
 <template name="establishURL">
   <div id="setup-instructions" class="center">
     {{#if currentUser.profile.public_url}}
@@ -64,6 +56,33 @@
   </div>
 </template>
 
+<template name="login">
+  <div id="home-container" class="centered-container">
+    {{#loginScreen }}
+      <p>
+        Welcome to TilesJS!  Sign in or whatever.  <a href="/register">Don't have an account?</a>
+      </p>
+    {{/loginScreen}}
+  </div>
+</template>
+
+<template name="loginScreen">
+  <div id="login-container" class="centered-container">
+    {{ > UI.contentBlock
+        context=__context__ }}
+    {{> loginForm }}
+  </div>
+</template>
+
+<template name="loginModal">
+  <div id="login-modal" class="modal">
+    <div class="modal-content">
+      <h4>Login</h4>
+      {{> loginForm modal=true }}
+    </div>
+  </div>
+</template>
+
 <template name="loginForm">
   <div class="turnkey-options">
     <div class="left valign-wrapper">
@@ -91,19 +110,10 @@
   </div>
 </template>
 
-<template name="loginScreen">
-  <div id="login-container" class="centered-container">
-    {{ > UI.contentBlock
-        context=__context__ }}
-    {{> loginForm }}
-  </div>
-</template>
-
-<template name="loginModal">
-  <div id="login-modal" class="modal">
-    <div class="modal-content">
-      <h4>Login</h4>
-      {{> loginForm modal=true }}
-    </div>
+<template name="socialLogin">
+  <div id="social-login-container">
+    <button id="google-account" type="button" class="btn waves-effect waves-light red"><i class="fa fa-fw fa-google-plus-square"></i> Google</button>
+    <button id="facebook-account" type="button" class="btn waves-effect waves-light blue"><i class="fa fa-fw fa-facebook-square"></i> Facebook</button>
+    <!--<button id="google-account" type="button" class="btn waves-effect waves-light red"><i class="fa fa-fw fa-google-plus-square"></i> Google</button>-->
   </div>
 </template>
