Turnkey navigation and registration is now working, closes #45

--- a/client/views/turnkey/turnkey.html
+++ b/client/views/turnkey/turnkey.html
@@ -21,7 +21,7 @@
 
 <template name="register">
   <div id="register-form-container" class="centered-container">
-    <p>Welcome to TilesJS!  If you must burden us with your presence I suppose you ought to make an account or something.  <a href="/">Already have an account?</a></p>
+    <p>Welcome to TilesJS!  If you must burden us with your presence I suppose you ought to make an account or something.  <a href="/login">Already have an account?</a></p>
     <div class="turnkey-options">
       <div class="left valign-wrapper">
         {{> socialLogin action="register" }}
