Implemented Material Done/Cancel buttons (#22) for `Template.editTile`.

--- a/client/views/edit-tile/edit-tile.html
+++ b/client/views/edit-tile/edit-tile.html
@@ -17,6 +17,20 @@
         </div>
       {{/if}}
     </div>
+    {{> editTileControls }}
+  </div>
+</template>
+
+<template name="editTileControls">
+  <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+    <a data-save-edit class="btn-floating btn-large green">
+      <i class="mdi-action-done"></i>
+    </a>
+  </div>
+  <div class="fixed-action-btn" style="bottom: 110px; right: 33px;">
+    <a data-cancel-edit class="btn-floating red">
+      <i class="mdi-content-clear"></i>
+    </a>
   </div>
 </template>
 
