--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -2,18 +2,22 @@
   <div id="tile-scroller">
     <div id="tile-container" class="flex-column"></div>
     {{#if verify currentUser}}
-      <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-        <a href="/edit/new" class="btn-floating btn-large red">
-          <i class="mdi-content-add"></i>
-        </a>
-        <!--<ul>
-          <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-          <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-          <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-          <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-        </ul>-->
-      </div>
+      {{> allTilesControls }}
     {{/if}}
+  </div>
+</template>
+
+<template name="allTilesControls">
+  <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+    <a href="/edit/new" class="btn-floating btn-large blue">
+      <i class="mdi-content-add"></i>
+    </a>
+    <!--<ul>
+      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+    </ul>-->
   </div>
 </template>
 
