Can safely create & edit Tiles.  Closes #52, closes #53

--- a/client/views/edit-tile/edit-tile.html
+++ b/client/views/edit-tile/edit-tile.html
@@ -1,7 +1,7 @@
 <template name="editTile">
   <div id="edit-panel">
     <div class="left">
-      {{> tileEditForm tile=tile}}
+      {{> tileEditForm tile=tile tileMap=tileMap}}
     </div>
     <div class="right">
       {{#if minimumTile}}
