Using lookback:tooltip instead of Materialize's tooltip feature.  Closes #60, closes #59

--- a/client/layouts/app/app.html
+++ b/client/layouts/app/app.html
@@ -1,6 +1,6 @@
 <template name="app">
   {{#if subsReady}}
-  
+
     {{> Template.dynamic template=rightMenu }}
 
     <div id="pusher-container" class="pusher">
@@ -8,5 +8,6 @@
       {{> Template.dynamic template=main }}
     </div>
 
+    {{> tooltips }}
   {{/if}}
 </template>
