--- a/tiles.less
+++ b/tiles.less
@@ -48,6 +48,12 @@ html {
   height: 100%;
   max-height: 100%;
 }
+.fixed-action-btn ul {
+  bottom: 45px !important;
+}
+.tooltip {
+  z-index: 10;
+}
 .red-btn {
   background-color: @lightRed;
 }
