--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -31,15 +31,31 @@
 
 <template name="allTilesControls">
   <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-    <a href="/edit/new" class="btn-floating btn-large blue">
-      <i class="mdi-content-add"></i>
+    <a class="btn-floating btn-large blue z-depth-2"  data-tooltip-direction="w" data-tooltip="Menu">
+      <i class="mdi-navigation-menu"></i>
     </a>
-    <!--<ul>
-      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-    </ul>-->
+    <ul>
+      <li>
+        <a class="btn-floating green darken-1" data-tooltip-direction="w" data-tooltip="Sign Out">
+          <i class="mdi-action-exit-to-app"></i>
+        </a>
+      </li>
+      <li>
+        <a class="btn-floating teal" data-tooltip-direction="w" data-tooltip="Sort Categories">
+          <i class="mdi-action-view-column"></i>
+        </a>
+      </li>
+      <li>
+        <a class="btn-floating cyan" data-tooltip-direction="w" data-tooltip="Sort Tiles">
+          <i class="mdi-action-view-module"></i>
+        </a>
+      </li>
+      <li>
+        <a href="/edit/new" class="btn-floating red" data-tooltip-direction="w" data-tooltip="Add Tile">
+          <i class="mdi-content-create"></i>
+        </a>
+      </li>
+    </ul>
   </div>
 </template>
 
