Removed right-menu, abstracted allTilesControls to handle both logged-in and logged-out users.

--- a/client/layouts/app/app.html
+++ b/client/layouts/app/app.html
@@ -1,7 +1,7 @@
 <template name="app">
   {{#if subsReady}}
 
-    {{> Template.dynamic template=rightMenu }}
+    <!-- {{> Template.dynamic template=rightMenu }} -->
 
     <div id="pusher-container" class="pusher">
       {{> Template.dynamic template=navbar }}
