New Material menu triggers login modal, closes #51.

--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -72,7 +72,7 @@
         {{/if}}
       </ul>
     {{else}}
-      <a class="btn-floating blue z-depth-2"  data-tooltip-direction="w" data-tooltip="Login">
+      <a data-login class="btn-floating blue z-depth-2"  data-tooltip-direction="w" data-tooltip="Login">
         <i class="mdi-communication-vpn-key"></i>
       </a>
     {{/if}}
