--- a/client/layouts/app/app.html
+++ b/client/layouts/app/app.html
@@ -8,6 +8,12 @@
       {{> Template.dynamic template=main }}
     </div>
 
+    {{#if currentUser}}
+
+    {{else}}
+      {{> loginModal }}
+    {{/if}}
+
     {{> tooltips }}
   {{/if}}
 </template>
