Fixes #60 using a global router enter trigger to simulate mouseleave() and mouseenter() on whatever button the mouse is hovering on.

--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -51,6 +51,11 @@
             </a>
           </li>
           <li>
+            <a href="/setup" class="btn-floating deep-orange lighten-1" data-tooltip-direction="w" data-tooltip="Change URL">
+              <i class="mdi-action-language"></i>
+            </a>
+          </li>
+          <li>
             <a href="/edit/new" class="btn-floating red" data-tooltip-direction="w" data-tooltip="Add Tile">
               <i class="mdi-content-create"></i>
             </a>
@@ -65,7 +70,7 @@
           {{else}}
             <li>
               <a href="/setup" class="btn-floating red" data-tooltip-direction="w" data-tooltip="Setup">
-                <i class="mdi-action-settings"></i>
+                <i class="mdi-action-language"></i>
               </a>
             </li>
           {{/if}}
