Refactored navbar into separate templates such as `allTiles` and `editTile` etc.  Simplified sub-template routing.  Search by keyword now functions using ReactiveVar instead of Session var, closes #58

--- a/client/layouts/app/app.html
+++ b/client/layouts/app/app.html
@@ -4,7 +4,7 @@
     <!-- {{> Template.dynamic template=rightMenu }} -->
 
     <div id="pusher-container" class="pusher">
-      {{> Template.dynamic template=navbar }}
+      <!-- {{> Template.dynamic template=navbar }}  -->
       {{> Template.dynamic template=main }}
     </div>
 
