--- a/client/views/edit-tile/edit-tile.html
+++ b/client/views/edit-tile/edit-tile.html
@@ -1,4 +1,5 @@
 <template name="editTile">
+  {{> editTileNavbar }}
   <div id="edit-panel">
     <div class="left">
       {{> tileEditForm tile=tile tileMap=tileMap}}
