--- a/client/views/establish-url/establish-url.html
+++ b/client/views/establish-url/establish-url.html
@@ -1,4 +1,5 @@
 <template name="establishURL">
+  {{> setupNavbar }}
   <div id="setup-instructions" class="center">
     {{#if currentUser.profile.public_url}}
       If we must, we must.
